# agent-contracts-benchmark

./: .env.example  .gitignore  ARCHITECTURE_ARMS.md  ARM_INSTRUCTIONS.md  BENCHMARK_SPEC.md  CHANGE_PROTOCOL.md  EVALUATION_NOTES.md  IMPLEMENTATION_PLAN.md  METRICS_SPEC.md  MULTI_LLM_BENCHMARK_PLAN.md  PROMPT.md  README.md  README_PROTOCOL.md  README_RECONSTRUCTION.md  RESULTS_ARMS.md  RESULTS_AUDIT.md  RESULTS_COMBINED.md  ROADMAP.md  STEP_PROTOCOL.md  pyproject.toml
app/: __init__.py
benchmark/: step_capabilities.yaml
contracts/: agent_card.yaml  base.yaml  contract_first.yaml  contract_flow.yaml
docs/: EXECUTIVE_SUMMARY.md  benchmark_freeze_statement.md  calibration_log.md  contract_audit_matrix.md  contract_enforcement_benchmark.md  contract_experiment.md  execution_plan.md  future_platform_roadmap.md  metodologia_propuesta.md  metodologia_propuesta.tex  oracle_spec.md  oracle_traceability_matrix.md  phd_backlog.md  phd_roadmap.md  pilot_calibration_statement.md  pre_freeze_audit.md  resultados_experimento.md  resultados_experimento.tex  rule_traceability_matrix.md  scenario_audit_matrix.md
results/: governor_results.jsonl  governor_summary.json  manifest_rows.csv  qc_report.json  reconstruction_summary.json  summary_by_arm_strategy.csv  summary_by_arm_strategy_step.csv  violation_detection_summary.json
scripts/: aggregate_manifests.py  benchmark_constants.py  build_site_data.py  create_baseline_branches.py  create_experiment_branches.py  create_reconstruction_branches.py  score_reconstruction_audits.py  validate_protocol.py  (+1 more)
site/: .gitignore  _quarto.yml  (+9 more)
(+23942 files in other folders)
