[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "architectural-contracts-benchmark"
version = "0.1.0"
description = "Enforcement-first benchmark scaffold for Agent Contracts and Agent Governor over tool-using LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Carlos Urteaga" }
]
dependencies = []

[tool.setuptools]
packages = ["app", "tools", "tools.enforcement", "tools.governor", "tools.violation_injection"]

[dependency-groups]
dev = [
  "pytest>=8.0",
]
openai = [
  "openai>=1.55.0",
]

[tool.uv]
default-groups = ["dev"]
